# phab-circleci-bridge

./: .gitignore  ChangeLog.md  README.md  cabal.project  cabal.project.freeze  circlehs.nix  default.nix  module.nix  phab-circleci-bridge.cabal  phab-circleci-bridge.nix  shell.nix
src/: Main.hs
